Edit main.css to keep web-backgrounds fixed in dark mode

--- a/HTML/css/main.css
+++ b/HTML/css/main.css
@@ -124,7 +124,7 @@ body {
         background-attachment: fixed;
     }
     body.dark {
-        background: url('../img/web-background-dark.jpg');
+        background-image: url('../img/web-background-dark.jpg');
     }
 }
 
